.provarCaches/00D410000011HE0EAM/objects/rstk__oplab__c.object
<CustomObject>
    <description>oplab__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__oplab_actlabrate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Labor Rate Override</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__oplab_bookdate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>oplab_bookdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__oplab_bookdte__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Book Date</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__oplab_chargehrs__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Hours</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__oplab_chargetypeind__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Charge Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__oplab_clockin__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>oplab_clockin</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstk__oplab_clockno__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Clock No</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__oplab_clockout__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>oplab_clockout</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstk__oplab_dept__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Dept</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__oplab_dept_ui__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Department</label>
        <referenceTo>rstk__rtdept__c</referenceTo>
        <relationshipLabel>ZZ-OPLAB</relationshipLabel>
        <relationshipName>ZZ_OPLAB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__oplab_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>divoplabs</relationshipLabel>
        <relationshipName>divoplabs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__oplab_duedte__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Due Date</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__oplab_empl_name__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Employee Name</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__oplab_icclockdtl__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>oplab_icclockdtl</label>
        <referenceTo>rstk__icclockdtl__c</referenceTo>
        <relationshipLabel>ZZ-OPLAB</relationshipLabel>
        <relationshipName>ZZ_OPLAB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__oplab_item__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Item No</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__oplab_mach__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>mach</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__oplab_mach_ui__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Machine</label>
        <referenceTo>rstk__rtmach__c</referenceTo>
        <relationshipLabel>ZZ-OPLAB</relationshipLabel>
        <relationshipName>ZZ_OPLAB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__oplab_op_comments__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Operation Comments</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__oplab_oper__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>oper</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__oplab_ordno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ordno</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__oplab_ordno_ui__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Order No</label>
        <referenceTo>rstk__wocst__c</referenceTo>
        <relationshipLabel>ZZ-OPLAB</relationshipLabel>
        <relationshipName>ZZ_OPLAB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__oplab_ordsite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To capture TargetSite from WO</description>
        <label>OrdSite UI</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>ZZ-OPLAB (OrdSite UI)</relationshipLabel>
        <relationshipName>ZZ_OPLAB1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__oplab_ordsts__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>WO Status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__oplab_pcntearned__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Pcnt Earned</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__oplab_prevhrs__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Previous Hours</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__oplab_proj_display__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Project</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__oplab_run_background_ind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Use Background Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__oplab_setrunhrsind__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Setup/Run Ind</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__oplab_shift__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Shift</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__oplab_site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>site_ui</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>ZZ-OPLAB</relationshipLabel>
        <relationshipName>ZZ_OPLAB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__oplab_syusr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Employee</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>ZZ-OPLAB</relationshipLabel>
        <relationshipName>ZZ_OPLAB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__oplab_tapaytype__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Labor Pay Type</label>
        <referenceTo>rstk__tapaytype__c</referenceTo>
        <relationshipLabel>ZZ-OPLAB</relationshipLabel>
        <relationshipName>ZZ_OPLAB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__oplab_txn_comments__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Transaction Comments</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__oplab_usrno__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>usrno</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__oplab_wctr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Work Center</label>
        <referenceTo>rstk__rtwctr__c</referenceTo>
        <relationshipLabel>ZZ-OPLAB (Work Center)</relationshipLabel>
        <relationshipName>ZZ_OPLAB1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__oplab_wctr_display__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>wctr_display</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__oplab_woordop__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Operations</label>
        <referenceTo>rstk__woordop__c</referenceTo>
        <relationshipLabel>ZZ-OPLAB</relationshipLabel>
        <relationshipName>ZZ_OPLAB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__oplab_wopwipseqno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>oplab_wopwipseqno</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>ZZ-OPLAB</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZZ-OPLAB</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>